# nfc-srix-programmer

./: CHANGELOG.md  CMakeLists.txt  README.md  build.sh  commands.c  config  logging.c  logging.h  main.c  modify_block.c  nfc_utils.c  nfc_utils.h  otp_reset.c  read_eeprom_content.c  read_eeprom_file.c  read_tag_info.c  write_eeprom_to_file.c  write_to_tag.c
